client: fix input-container graph-input when got-it message is visible. Fixes #344

--- a/res/client/css/partials/input-bar.scss
+++ b/res/client/css/partials/input-bar.scss
@@ -32,7 +32,7 @@
 
 #input-container__graph-input {
   position: absolute;
-  top: 130px;
+  margin-top: 80px;
   left: 24px;
   height: 36px;
   line-height: initial;
