--- a/res/client/css/style.css
+++ b/res/client/css/style.css
@@ -331,7 +331,7 @@ body.debug .debug-ui-right {
 
 #input-container__graph-input {
   position: absolute;
-  top: 130px;
+  margin-top: 80px;
   left: 24px;
   height: 36px;
   line-height: initial; }
